Can signin and read/write player data
code looks gross

--- a/ServerCode/app/src/main/res/values/strings.xml
+++ b/ServerCode/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
 	<string name="app_name">Game</string>
+	<string name="app_id">129334607027</string>
 	<string name="title_activity_google_play">GooglePlayActivity</string>
 </resources>
